hide search by default

--- a/contrib/__wm/index.html
+++ b/contrib/__wm/index.html
@@ -28,7 +28,7 @@
 
 </head>
 <body>
-<div class="ui vertical details right sidebar active" style="-moz-box-shadow:    3px 3px 5px 6px #ccc; -webkit-box-shadow: 3px 3px 5px 6px #ccc; box-shadow:         3px 3px 5px 6px #ccc;background-image: url(/__wm/mesh.png)">
+<div class="ui vertical details right sidebar" style="-moz-box-shadow: 3px 3px 5px 6px #ccc; -webkit-box-shadow: 3px 3px 5px 6px #ccc; box-shadow:         3px 3px 5px 6px #ccc;background-image: url(/__wm/mesh.png)">
   include "iframe-contents.html"
 </div>
 <div class="ui vertical facets left sidebar">
