--- a/static/__wm/iframe-contents.html
+++ b/static/__wm/iframe-contents.html
@@ -3,7 +3,7 @@
 <img style="vertical-align: middle; width: 60px" src="/__wm/icons/manager.png" alt="Member" /><a id="pxMember" style="font-size: 120%; font-weight: bold; padding-left: 10px"></a>
 </div>
 <div>
-<a id="dashboardLink" target="_top" href="http://dashboard.fg.zooid.org"><img src="/__wm/images/dashboard.png" alt="dashboard" /></a>
+<a id="dashboardLink" target="_top" href="http://dashboard.wc.zooid.org"><img src="/__wm/images/dashboard.png" alt="dashboard" /></a>
 </div>
 <br style="clear: both" />
     <h3 class="morenext">Annotations »</h3>
