--- a/static/__wm/iframe.html
+++ b/static/__wm/iframe.html
@@ -14,7 +14,7 @@
 <script src="/__wm/semantic-ui/javascript/semantic.js"></script>
 
 <script src="anno.js" defer="defer"></script>
-<script src="http://dashboard.fg.zooid.org/member.js"></script>
+<script src="http://dashboard.wc.zooid.org/member.js"></script>
 
 <link rel='stylesheet' href='dashboard.css'>
 <style>
@@ -98,7 +98,7 @@ h3 { border-bottom: 1px dotted grey; }
 <img style="vertical-align: middle; width: 60px" src="/__wm/icons/manager.png" alt="Member" /><a id="pxMember" style="font-size: 120%; font-weight: bold; padding-left: 10px"></a>
 </div>
 <div>
-<a id="dashboardLink" target="_top" href="http://dashboard.fg.zooid.org"><img src="/__wm/images/dashboard.png" alt="dashboard" /></a>
+<a id="dashboardLink" target="_top" href="http://dashboard.wc.zooid.org"><img src="/__wm/images/dashboard.png" alt="dashboard" /></a>
 </div>
 <br style="clear: both" />
     <h3 class="morenext">Annotations »</h3>
