--- a/contrib/__wm/manage.html
+++ b/contrib/__wm/manage.html
@@ -1,3 +1,4 @@
+  <div class="manage content hidden">
     <div class="innerMoreNext">
       <h3 class="morenext">Profile »</h3>
       <div class="hidden innerMoreNext">
@@ -55,3 +56,4 @@
           display, find, delete, merge, rename by name, date and member
         </div>
       </div>
+  </div>
