--- a/contrib/__wm/iframe-contents.html
+++ b/contrib/__wm/iframe-contents.html
@@ -1,16 +1,40 @@
-<div id="pxControls" style="background-color: white; padding:3px; width: 95%">
-<div style="float: right">
-<img style="vertical-align: middle; width: 60px" src="/__wm/icons/manager.png" alt="Member" /><a id="pxMember" style="font-size: 120%; font-weight: bold; padding-left: 10px"></a>
-</div>
-<div>
-<a id="dashboardLink" target="_top" href="HOMEPAGE"><img src="/__wm/images/dashboard.png" alt="dashboard" /></a>
-</div>
-<br style="clear: both" />
-  include "annotate.html"
-  include "settings.html"    
-  include "collab.html"    
-
-  <div class="teamToggle"></div>
-  <button id="updateAnnotations">Update</button>
+<div id="annotateBar" style="background-color: #ffe">
+  <div>
+  <span style="float: left"><span id="pxControls" style="width: 8%"></span><strong>Annotations</strong></span>
   <span style="float: right"><button id="annoNew">New</button></span> 
-</div>
+  </div>
+  <br style="clear: both" />
+  <div id="treeContainer" style="overflow: auto; padding: 4px">
+    <div id="annoTree"></div>
+  </div>
+  <div id="annotateEditor" class="editor" style="display: none">
+    <form>
+      <input type="hidden" id="annoQuote" />
+      <fieldset>
+        <div id="schemas">
+        </div>
+        <div>
+          <label for="annoValue">Value</label>
+          <input name="annoValue" id="annoValue" style="width: 100%" />
+        </div>
+        <div>
+          <label for="types">Type</label>
+          <textarea style="width: 100%" name="types" id="types" class="text ui-widget-content ui-corner-all"></textarea>
+        </div>
+        <div>
+          <label for="annoDesc">Description</label>
+          <textarea style="width: 100%" name="annoDesc" id="annoDesc" class="text ui-widget-content ui-corner-all" /></textarea>
+        </div>
+        <div>
+          <label for="created">Created</label>
+          <input type="text" name="created" id="created" value="" class="text ui-widget-content ui-corner-all" />
+        </div>
+        <div>      
+          <button id="annoSave">Save</button>
+          <button id="annoErase">Erase</button>
+          <span style="float: right"><button id="annoCancel">Cancel</button></span>
+        </div>
+      </fieldset>
+    </form>
+  </div>
+</div>  
