--- a/static/__wm/annotate.html
+++ b/static/__wm/annotate.html
@@ -1,10 +1,11 @@
-  <h3 class="morenext">Annotations »</h3>
-    <div>
-    <div style="height: 300px; overflow: auto">
-      <div id="annoTree"></div>
-    </div>
-    <div id="annotateEditor" class="editor" style="display: none">
-      <form><input type="hidden" id="annoQuote" />
+<div id="annotateBar">
+  <div id="pxControls"></div>
+  <div id="treeContainer" style="overflow: auto">
+    <div id="annoTree"></div>
+  </div>
+  <div id="annotateEditor" class="editor" style="display: none">
+    <form>
+      <input type="hidden" id="annoQuote" />
       <fieldset>
         <div id="schemas">
         </div>
@@ -28,6 +29,6 @@
           <button id="annoSave">Save</button> <button id="annoUnsave">Unsave</button> <button id="annoErase">Erase</button><span style="float: right"><button id="annoCancel">Cancel</button></span>
         </div>
       </fieldset>
-      </form>
-     </div>
+    </form>
   </div>
+</div>  
