--- a/static/__wm/index.html
+++ b/static/__wm/index.html
@@ -20,86 +20,46 @@ progress:after { content: '%'; }
 </head>
 <body>
 <div class="ui vertical details right sidebar" style="-moz-box-shadow: 3px 3px 5px 6px #ccc; -webkit-box-shadow: 3px 3px 5px 6px #ccc; box-shadow: 3px 3px 5px 6px #ccc;background-image: url(/__wm/mesh.png)">
-  <div id="pxControls" style="background-color: white; padding:3px; width: 95%">
-  <div style="float: right">
-  <img style="vertical-align: middle; width: 60px" src="/__wm/icons/manager.png" alt="Member" /><a id="pxMember" style="font-size: 120%; font-weight: bold; padding-left: 10px"></a>
-  </div>
-  <div>
-  <a id="dashboardLink" target="_top" href="http://dashboard.wc.zooid.org"><img src="/__wm/images/dashboard.png" alt="dashboard" /></a>
-  </div>
-  <br style="clear: both" />
-      <h3 class="morenext">Annotations »</h3>
-        <div>
-        <div style="height: 300px; overflow: auto">
-          <div id="annoTree"></div>
-        </div>
-        <div id="annotateEditor" class="editor" style="display: none">
-          <form><input type="hidden" id="annoQuote" />
-          <fieldset>
-            <div id="schemas">
-            </div>
-            <div>
-              <label for="annoValue">Value</label>
-              <input name="annoValue" id="annoValue" style="width: 100%" />
-            </div>
-            <div>
-              <label for="types">Type</label>
-              <textarea style="width: 100%" name="types" id="types" class="text ui-widget-content ui-corner-all"></textarea>
-            </div>
-            <div>
-              <label for="annoDesc">Description</label>
-              <textarea style="width: 100%" name="annoDesc" id="annoDesc" class="text ui-widget-content ui-corner-all" /></textarea>
-            </div>
-            <div>
-              <label for="created">Created</label>
-              <input type="text" name="created" id="created" value="" class="text ui-widget-content ui-corner-all" />
-            </div>
-            <div>      
-              <button id="annoSave">Save</button> <button id="annoUnsave">Unsave</button> <button id="annoErase">Erase</button><span style="float: right"><button id="annoCancel">Cancel</button></span>
-            </div>
-          </fieldset>
-          </form>
-         </div>
-      </div>
-
-      <h3 class="morenext">Settings »</h3>
-      <div class="ui form segment">
-        <div class="field">
-          <div class="ui checkbox">
-            <input id="watch" type="checkbox" name="watch">
-            <label for="watch">Watch</label>
-          </div>
-        </div>
-        <div id="watchOptions" class="field">
-          <input id="scanEvery" class="spinner" value="1" size="8" title="when to recheck starting points">
-          <select><option>days</option><option>hours</option></select>
-        </div>
-        <br />
-        <div class="field">
-          <div class="ui checkbox">
-            <input id="filter" type="checkbox" name="filter">
-            <label for="filter">Filter</label>
-          </div>
-        </div>
-        <div id="filterOptions" class="field">
-          <label for="pattern">Pattern</label>
-          <div class="ui left input">
-            <input id="filterPattern" title="pattern to ignore pages" />
-          </div>
-        </div>
-      </div>
-
-      <h3 class="morenext">Collaboration »</h3>
-      <div class="editor hidden" id="collabEditor">
-        <div style="height: 100px; scroll: auto" id="collabStream"></div>
-        <input id="collabInput" />
-      </div>
-
-
-    <div class="teamToggle"></div>
-    <button id="updateAnnotations">Update</button>
+  <div id="annotateBar" style="background-color: #ffe">
+    <div>
+    <span style="float: left"><span id="pxControls" style="width: 8%"></span><strong>Annotations</strong></span>
     <span style="float: right"><button id="annoNew">New</button></span> 
-  </div>
+    </div>
+    <br style="clear: both" />
+    <div id="treeContainer" style="overflow: auto; padding: 4px">
+      <div id="annoTree"></div>
+    </div>
+    <div id="annotateEditor" class="editor" style="display: none">
+      <form>
+        <input type="hidden" id="annoQuote" />
+        <fieldset>
+          <div id="schemas">
+          </div>
+          <div>
+            <label for="annoValue">Value</label>
+            <input name="annoValue" id="annoValue" style="width: 100%" />
+          </div>
+          <div>
+            <label for="types">Type</label>
+            <textarea style="width: 100%" name="types" id="types" class="text ui-widget-content ui-corner-all"></textarea>
+          </div>
+          <div>
+            <label for="annoDesc">Description</label>
+            <textarea style="width: 100%" name="annoDesc" id="annoDesc" class="text ui-widget-content ui-corner-all" /></textarea>
+          </div>
+          <div>
+            <label for="created">Created</label>
+            <input type="text" name="created" id="created" value="" class="text ui-widget-content ui-corner-all" />
+          </div>
+          <div>      
+            <button id="annoSave">Save</button>
+            <button id="annoErase">Erase</button>
+            <span style="float: right"><button id="annoCancel">Cancel</button></span>
+          </div>
+        </fieldset>
+      </form>
+    </div>
+  </div>  
 
 </div>
 <div class="ui content" id="pxContent" class="tabs">
@@ -119,7 +79,11 @@ progress:after { content: '%'; }
         <i class="mini chat icon"></i>
       </button>
 
-     <button title="Manage" class="ui mini manage attached button">
+     <button title="Team" class="ui mini team attached button">
+       <i class="mini users icon"></i>
+     </button>
+
+     <button title="Settings" class="ui mini settings attached button">
        <i class="mini settings icon"></i>
      </button>
     </div>
@@ -239,23 +203,14 @@ progress:after { content: '%'; }
           </div>
 
     </div>
-    <div class="manage content hidden">
-        <div class="innerMoreNext">
-          <h3 class="morenext">Profile »</h3>
+    <div class="team content hidden">
+          <h3 class="morenext">New »</h3>
           <div class="hidden innerMoreNext">
-            Image: <img alt="profile image" src="/__wm/icons/manager.png" /><br />
-            Email: <input id="changeEmail" /> <button>Change</button>
+            Name: <input id="newName" />
+            Type: <select id="newType"><option>User</option><option>Annotation set</option><option>Scraper</option></select>
+            <button id="newCreate">Add</button>
           </div>
-          <h3 class="morenext">Team »</h3>
-          <div id="teamManage" class="innerMoreNext hidden">
-            <h3 class="morenext">New »</h3>
-            <div class="hidden innerMoreNext">
-              Name: <input id="newName" />
-              Type: <select id="newType"><option>User</option><option>Annotation set</option><option>Scraper</option></select>
-              <button id="newCreate">Add</button>
-            </div>
-          <div id="teamList">
-          </div>
+          <div id="teamList"></div>
           <div class="anedit" id="aneditor">
             <a title="Change name by editing this field">Name</a>: <input id="username" /><input type="hidden" id="lastUsername" /><br />
             Description:<br />
@@ -269,28 +224,38 @@ progress:after { content: '%'; }
               <textarea id="negativeTerms" cols="40" rows="5"></textarea><br />
               <input id="doLemma" type="checkbox" /> <a title="If checked, merge forms of words">Lemmatize</a>
               <input id="isTag" type="checkbox" /> <a title="If checked, make document rather than content level annotation">Tag</a>
-            </div>
-            <div class="anedit" id="editUser">
-              <h4>User</h4>
-              Email: <input id="newEmail" /><br />
-              Password: <input type="password" id="memberPassword" /><br />
-              Repeat: <input type="password" id="passwordRepeat" /><br />
-              <input id="canValidate" type="checkbox"> <a title="If checked, member can validate other member's annotations">Can approve</a><br />
-            </div>
-            <div class="anedit" id="editScraper">
-              <h4>Scraper</h4>
-              Password: <input type="password" id="memberPassword" /><br />
-              Repeat: <input type="password" id="passwordRepeat" /><br />
-            </div>
-            <div class="anedit" id="editAgent">
-              <h4>Agent</h4>
-            </div>
-            <input id="isInactive" type="checkbox"> <a title="If checked, member is inactive">Active</a><br />
-            <input id="needsValidation" type="checkbox"> <a title="If checked, values stored by this member must be validated by another">Needs validation</a><br />
-            <button id="teamUpdate">Update</button> <button id="teamRemove">Remove</button>
-            <h3>Statistics</h3>
-              created, queue, annotations, logins
-            </div>
+          </div>
+          <div class="anedit" id="editUser">
+            <h4>User</h4>
+            Email: <input id="newEmail" /><br />
+            Password: <input type="password" id="memberPassword" /><br />
+            Repeat: <input type="password" id="passwordRepeat" /><br />
+            <input id="canValidate" type="checkbox"> <a title="If checked, member can validate other member's annotations">Can approve</a><br />
+          </div>
+          <div class="anedit" id="editScraper">
+            <h4>Scraper</h4>
+            Password: <input type="password" id="memberPassword" /><br />
+            Repeat: <input type="password" id="passwordRepeat" /><br />
+          </div>
+          <div class="anedit" id="editAgent">
+            <h4>Agent</h4>
+          </div>
+          <input id="isInactive" type="checkbox"> <a title="If checked, member is inactive">Active</a><br />
+          <input id="needsValidation" type="checkbox"> <a title="If checked, values stored by this member must be validated by another">Needs validation</a><br />
+          <button id="teamUpdate">Update</button>
+          <button id="teamRemove">Remove</button>
+          <button id="teamCancel">Cancel</button>
+          <h3>Statistics</h3>
+            created, queue, annotations, logins
+        </div>
+
+    </div>
+    <div class="settings content hidden">
+        <div class="innerMoreNext">
+          <h3 class="morenext">Profile »</h3>
+          <div class="hidden innerMoreNext">
+            Image: <img alt="profile image" src="/__wm/icons/manager.png" /><br />
+            Email: <input id="changeEmail" /> <button>Change</button>
           </div>
           <h3 class="morenext">Annotations »</h3>
           <div class="hidden innerMoreNext">
@@ -300,7 +265,7 @@ progress:after { content: '%'; }
 
     </div>
     <div id="uploadInfo">
-      <p id="upload" class="hidden"><label>Drag & drop not supported, but you can still upload via this input field:<br><input type="file"></label></p>
+      <p id="upload" class="hidden"><label>Your browser doesn't support drag & drop, but you can still upload via this input field:<br /><input type="file"></label></p>
       <p id="filereader">File API & FileReader API not supported</p>
       <p id="formdata">XHR2's FormData is not supported</p>
       <p id="progress">XHR2's upload progress isn't supported</p>
