--- a/static/__wm/settings.html
+++ b/static/__wm/settings.html
@@ -1,26 +1,11 @@
-  <h3 class="morenext">Settings »</h3>
-  <div class="ui form segment">
-    <div class="field">
-      <div class="ui checkbox">
-        <input id="watch" type="checkbox" name="watch">
-        <label for="watch">Watch</label>
+    <div class="innerMoreNext">
+      <h3 class="morenext">Profile »</h3>
+      <div class="hidden innerMoreNext">
+        Image: <img alt="profile image" src="/__wm/icons/manager.png" /><br />
+        Email: <input id="changeEmail" /> <button>Change</button>
+      </div>
+      <h3 class="morenext">Annotations »</h3>
+      <div class="hidden innerMoreNext">
+        display, find, delete, merge, rename by name, date and member
       </div>
     </div>
-    <div id="watchOptions" class="field">
-      <input id="scanEvery" class="spinner" value="1" size="8" title="when to recheck starting points">
-      <select><option>days</option><option>hours</option></select>
-    </div>
-    <br />
-    <div class="field">
-      <div class="ui checkbox">
-        <input id="filter" type="checkbox" name="filter">
-        <label for="filter">Filter</label>
-      </div>
-    </div>
-    <div id="filterOptions" class="field">
-      <label for="pattern">Pattern</label>
-      <div class="ui left input">
-        <input id="filterPattern" title="pattern to ignore pages" />
-      </div>
-    </div>
-  </div>
