--- a/contrib/__wm/index.html
+++ b/contrib/__wm/index.html
@@ -22,31 +22,29 @@ progress:after { content: '%'; }
 <div class="ui vertical details right sidebar" style="-moz-box-shadow: 3px 3px 5px 6px #ccc; -webkit-box-shadow: 3px 3px 5px 6px #ccc; box-shadow: 3px 3px 5px 6px #ccc;background-image: url(/__wm/mesh.png)">
   include "iframe-contents.html"
 </div>
-<div class="ui content" id="pxContent" class="tabs">
-  <div class="fixed header" id="header">
-    <div class="ui buttons">
-     <button title="Search settings" class="ui mini search attached right button">
-        <i class="mini search icon"></i>
-        <span id="searchCount"><img src="/__wm/loading.gif" alt="loading results" /><span>
-      </button>
+<div class="ui content" id="pxContent" style="width: 100%">
+  <div class="ui buttons">
+   <button title="Search settings" class="ui mini search attached right button">
+      <i class="mini search icon"></i>
+      <span id="searchCount"><img src="/__wm/loading.gif" alt="loading results" /><span>
+    </button>
 
-     <button title="Scraper settings" class="ui mini scrape attached button">
-       <i class="mini sitemap icon"></i>
-       Inactive
-     </button>
+   <button title="Scraper settings" class="ui mini scrape attached button">
+     <i class="mini sitemap icon"></i>
+     Inactive
+   </button>
 
-     <button title="Conversations" class="ui mini chat attached button">
-        <i class="mini chat icon"></i>
-      </button>
+    <button title="Conversations" class="ui mini chat attached button">
+      <i class="mini chat icon"></i>
+    </button>
 
-     <button title="Team" class="ui mini team attached button">
-       <i class="mini users icon"></i>
-     </button>
+   <button title="Team" class="ui mini team attached button">
+     <i class="mini users icon"></i>
+   </button>
 
-     <button title="Settings" class="ui mini settings attached button">
-       <i class="mini settings icon"></i>
-     </button>
-    </div>
+   <button title="Settings" class="ui mini settings attached button">
+     <i class="mini settings icon"></i>
+   </button>
   </div>
   <div class="ui content container">
     <div class="search content hidden">
@@ -81,7 +79,7 @@ progress:after { content: '%'; }
 <script src="HOMEPAGE/member.js" defer="defer"></script>
 <script src="lib/jquery-1.9.1.js"></script>
 <script src="lib/jquery-ui.js"></script>
-<script src="lib/jstree/jquery.jstree.js"></script>
+<script src="lib/jstree/jstree.min.js"></script>
 <script src="lib/jquery.cookie.js"></script>
 <script src="lib/jquery.address.js"></script>
 <script src="lib/faye-browser-min.js"></script>
