--- a/contrib/__wm/iframe-contents.html
+++ b/contrib/__wm/iframe-contents.html
@@ -1,6 +1,6 @@
 <div id="annotateBar" style="background-color: #ffe">
   <div>
-  <span style="float: left"><span id="pxControls" style="width: 8%"></span><strong>Annotations</strong></span>
+  <span style="float: left"><span id="pxControls"></span><strong>Annotations</strong></span>
   <span style="float: right"><button id="annoNew">New</button></span> 
   </div>
   <br style="clear: both" />
