item annotations in list, button tweaking

--- a/contrib/__wm/index.html
+++ b/contrib/__wm/index.html
@@ -23,8 +23,8 @@ progress:after { content: '%'; }
   include "iframe-contents.html"
 </div>
 <div class="ui content" id="pxContent" style="width: 100%">
-  <div class="ui buttons">
-   <button title="Search settings" class="ui mini search attached right button">
+  <div class="six fluid ui buttons">
+   <button title="Search settings" class="ui mini search attached button">
       <i class="mini search icon"></i>
       <span id="searchCount"><img src="/__wm/loading.gif" alt="loading results" /><span>
     </button>
@@ -40,6 +40,10 @@ progress:after { content: '%'; }
 
    <button title="Team" class="ui mini team attached button">
      <i class="mini users icon"></i>
+   </button>
+
+   <button title="Lab" class="ui mini lab attached button">
+     <i class="mini lab icon"></i>
    </button>
 
    <button title="Settings" class="ui mini settings attached button">
